syntax = "proto3";

package main;

option go_package = "./proto";

// 添加公司收发货地址表
message AddCompanyAddressReq {
  string address_name = 1; //地址名称
  string city = 2; //市
  string create_by = 3; //创建者
  int32 send_status = 4; //默认发货地址：0->否；1->是
  string detail_address = 5; //详细地址
  string region = 6; //区
  string name = 7; //收发货人姓名
  string phone = 8; //收货人电话
  string province = 9; //省/直辖市
  int32 receive_status = 10; //是否默认收货地址：0->否；1->是



}

message AddCompanyAddressResp {
  string pong = 1;
}

// 删除公司收发货地址表
message DeleteCompanyAddressReq {
  repeated int64 ids = 1;
}

message DeleteCompanyAddressResp {
  string pong = 1;
}

// 更新公司收发货地址表
message UpdateCompanyAddressReq {
  string address_name = 1; //地址名称
  string city = 2; //市
  int32 send_status = 3; //默认发货地址：0->否；1->是
  string update_by = 4; //更新者
  string detail_address = 5; //详细地址
  int64 id = 6; //
  string name = 7; //收发货人姓名
  string phone = 8; //收货人电话
  string province = 9; //省/直辖市
  int32 receive_status = 10; //是否默认收货地址：0->否；1->是
  string region = 11; //区


}

message UpdateCompanyAddressResp {
  string pong = 1;
}

// 更新公司收发货地址表状态
message UpdateCompanyAddressStatusReq {
  repeated int64 ids = 1;
  int32 receive_status = 2; //是否默认收货地址：0->否；1->是
  int32 send_status = 3; //默认发货地址：0->否；1->是
  int32 flag = 4;

}

message UpdateCompanyAddressStatusResp {
  string pong = 1;
}

// 查询公司收发货地址表详情
message QueryCompanyAddressDetailReq {
    int64 id = 1;
}

message QueryCompanyAddressDetailResp {
  string address_name = 1; //地址名称
  string city = 2; //市
  string create_by = 3; //创建者
  string create_time = 4; //创建时间
  string detail_address = 5; //详细地址
  int64 id = 6; //
  string name = 7; //收发货人姓名
  string phone = 8; //收货人电话
  string province = 9; //省/直辖市
  int32 receive_status = 10; //是否默认收货地址：0->否；1->是
  string region = 11; //区
  int32 send_status = 12; //默认发货地址：0->否；1->是
  string update_by = 13; //更新者
  string update_time = 14; //更新时间

}

// 分页查询公司收发货地址表列表
message QueryCompanyAddressListReq {
  int64 page_num = 1; //第几页
  int64 page_size = 2; //每页的数量
  string address_name = 3; //地址名称

}

message CompanyAddressListData {
  string address_name = 1; //地址名称
  string city = 2; //市
  string create_by = 3; //创建者
  string create_time = 4; //创建时间
  string detail_address = 5; //详细地址
  int64 id = 6; //
  string name = 7; //收发货人姓名
  string phone = 8; //收货人电话
  string province = 9; //省/直辖市
  int32 receive_status = 10; //是否默认收货地址：0->否；1->是
  string region = 11; //区
  int32 send_status = 12; //默认发货地址：0->否；1->是
  string update_by = 13; //更新者
  string update_time = 14; //更新时间

}

message QueryCompanyAddressListResp {
  int64 total = 1;
  repeated  CompanyAddressListData list = 2;
}

// 公司收发货地址表
service CompanyAddressService {
  // 添加公司收发货地址表
  rpc AddCompanyAddress(AddCompanyAddressReq) returns (AddCompanyAddressResp){}
  // 删除公司收发货地址表
  rpc DeleteCompanyAddress(DeleteCompanyAddressReq) returns (DeleteCompanyAddressResp){}
  // 更新公司收发货地址表
  rpc UpdateCompanyAddress(UpdateCompanyAddressReq) returns (UpdateCompanyAddressResp ){}
  // 更新公司收发货地址表状态
  rpc UpdateCompanyAddressStatus(UpdateCompanyAddressStatusReq) returns (UpdateCompanyAddressStatusResp ){}
  // 查询公司收发货地址表详情
   rpc QueryCompanyAddressDetail(QueryCompanyAddressDetailReq) returns (QueryCompanyAddressDetailResp){}
  // 查询公司收发货地址表列表
  rpc QueryCompanyAddressList(QueryCompanyAddressListReq) returns (QueryCompanyAddressListResp){}


}
